--- a/src/components/teamDropdown/teamDropdown.scss
+++ b/src/components/teamDropdown/teamDropdown.scss
@@ -1,9 +1,11 @@
+
 .dropdown-container{
-    width: 100vw;
+    width: 60vw;
     max-width: 100vw;
     padding: 10px;
     display: flex;
     flex-direction: initial;
+    border-radius: 10px;
     
     &__arrow{
     margin-top: 3px;
