--- a/src/components/userDetails/userDetails.scss
+++ b/src/components/userDetails/userDetails.scss
@@ -9,9 +9,18 @@
     color: black;
 
     &__pic{
+     
         width: 80px;
         height: 80px;
+        border-radius: 50%;
         margin: 10px;
+
+        img{
+            width: 80px;
+            height: 80px;
+            border: 5px solid blue;
+            border-radius: 50%;
+        }
     }
 
     &__info{
