--- a/src/components/userDetails/userDetails.scss
+++ b/src/components/userDetails/userDetails.scss
@@ -29,7 +29,7 @@
       flex-direction: column;
       margin-bottom: 0;
 
-      &__username-star {
+      &__username {
         height: 50px;
         font-size: 16px;
         font-weight: bold;
