--- a/src/components/topOne/topOne.scss
+++ b/src/components/topOne/topOne.scss
@@ -7,11 +7,20 @@
   flex-direction: column;
   align-items: center;
 
+  // .top-one-photo {
+  //   width: 120px;
+  //   height: 120px;
+  //   border-radius: 60px;
+  //   margin-bottom: 15px;
+  // }
+
+  .circle {
+    width: unset;
+    height: unset;
+  }
+
   .top-one-photo {
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
-    margin-bottom: 15px;
+    width: 100%;
   }
 
   .top-one-details {
@@ -37,8 +46,8 @@
   }
 
   .top-one-icon-img {
-    width: 10%;
-    margin: 0px 15px 15px 15px;
+    width: 5%;
+    margin: 0px 20px 20px 20px;
   }
 
   .top-one-icon {
