notifications icon to white

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -24,6 +24,7 @@
 
     svg {
       color:white;
+      filter: invert(1);
       font-size: 30px;
       margin-right: 10px;
       cursor: pointer;
