--- a/src/components/teamDropdown/teamDropdown.scss
+++ b/src/components/teamDropdown/teamDropdown.scss
@@ -1,5 +1,6 @@
+//@import "../userDetails/userDetails.scss";
 
-.dropdown-container{
+.dropdown{
     width: 60vw;
     max-width: 100vw;
     padding: 10px;
@@ -10,15 +11,6 @@
     &__arrow{
     margin-top: 3px;
     margin-left: 2px;
-    }
-
-    &__data{
-        &__profile{
-            display: flex;
-            flex-direction: column;
-            margin: 5px;
-            padding: 5px;
-        }
     }
 
 }
