--- a/src/components/topOne/topOne.scss
+++ b/src/components/topOne/topOne.scss
@@ -19,13 +19,21 @@
     height: unset;
   }
 
+  .square {
+    width: unset;
+  }
+
   .top-one-photo {
+    display: flex;
+    flex-direction: row;
     width: 100%;
+    justify-content: center;
   }
 
   .top-one-details {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
   }
 
@@ -50,9 +58,14 @@
     margin: 0px 20px 20px 20px;
   }
 
-  .top-one-icon {
+  .top-one-animation-details {
     display: flex;
     flex-direction: row;
     justify-content: center;
+  }
+
+  .top-one-animation {
+    width: 120px;
+    height: 120px;
   }
 }
