create podium from user list

--- a/src/components/podium/podium.scss
+++ b/src/components/podium/podium.scss
@@ -17,17 +17,17 @@
     justify-content: space-evenly;
   }
 
-  .podium-second-position {
+  .podium-2-position {
     background-color: rgb(107, 128, 221);
   }
 
-  .podium-third-position {
+  .podium-3-position {
     background-color: rgb(159, 174, 241);
     height: 200px;
     transform: translateY(25px);
   }
 
-  .podium-forth-position {
+  .podium-4-position {
     background-color: rgb(215, 223, 255);
     height: 170px;
     transform: translateY(40px);
