--- a/src/components/comments/comments.scss
+++ b/src/components/comments/comments.scss
@@ -1,31 +1,40 @@
 .comments-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  
-    p {
-      margin: 4px 0;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  p {
+    margin: 4px 0;
   }
-  
-  .comment-toggle-container {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    color: #444;
-    cursor: pointer;
-    margin-left: 12px;
-  }
-  
-  .comment-icon {
-    margin-right: 4px;
-  }
-  
-  .comment-text {
-    text-decoration: underline;
-  }
-  
-  .comment-text:hover {
-    font-weight: bold;
-  }
-  
+}
+
+.comment-toggle-container {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  color: #444;
+  cursor: pointer;
+  margin-left: 12px;
+}
+
+.comment-icon {
+  margin-right: 4px;
+}
+
+.comment-button {
+  text-decoration: underline;
+}
+
+.comment-button:hover {
+  font-weight: bold;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.comment-user {
+  margin-bottom: 4px;
+}
