--- a/src/components/podium/podium.scss
+++ b/src/components/podium/podium.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   align-items: center;
 
-  .podium-bars {
+  &__bars {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,17 +17,17 @@
     justify-content: space-evenly;
   }
 
-  .podium-2-position {
+  &__2-position {
     background-color: rgb(107, 128, 221);
   }
 
-  .podium-3-position {
+  &__3-position {
     background-color: rgb(159, 174, 241);
     height: 200px;
     transform: translateY(25px);
   }
 
-  .podium-4-position {
+  &__4-position {
     background-color: rgb(215, 223, 255);
     height: 170px;
     transform: translateY(40px);
@@ -38,19 +38,19 @@
     height: 80px;
   }
 
-  .podium-position {
+  &__position {
     font-size: 28px;
     font-weight: bold;
     text-shadow: $default-shadow;
   }
 
-  .podium-username {
+  &__username {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
   }
 
-  .podium-points {
+  &__points {
     font-size: 14px;
   }
 }
