--- a/src/components/profileProgressBar/profileProgressBar.scss
+++ b/src/components/profileProgressBar/profileProgressBar.scss
@@ -1,15 +1,14 @@
 .progress-bar {
   width: 100%;
-  height: 20px;
-  border-radius: 10px;
+  height: 20px; 
 
   &-completed {
     height: 100%;
-    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     font-weight: bold;
+    background-color: purple;
   }
 }
