--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -1,35 +1,23 @@
 .nav-menu {
-    background-color: #1a3891;
+  background-color: #1a3891;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  align-items: center;
+
+  .nav-containers {
     height: 50px;
-    padding: 10px;
-    position: relative;
     display: flex;
+    justify-content: space-around;
     align-items: center;
 
-    .nav-containers {
-        margin-left: 0 auto;
-        display: flex;
-        color: #fff;
-        position: absolute;
-        font-size: 55px;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-       
-        .nav-button {
-            margin-left: 0 auto;
-            margin-right: 0 auto; 
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            position: relative;
-            justify-content: center;
-       }
-       
-       .nav-button:hover{
-        background-color: #031d69;
-       }
+    .nav-button {
+      cursor: pointer;
+      font-size: 24px;
+      margin: 0 20px;
     }
+  }
 }
