--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -4,9 +4,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #fff;
   border-top: 1px solid #ccc;
   align-items: center;
+  color: white;
 
   .nav-containers {
     height: 50px;
