--- a/src/components/formButton/formButton.scss
+++ b/src/components/formButton/formButton.scss
@@ -1,6 +1,6 @@
 .formButton {
   display: inline-block;
-  padding: 0.5em 1em;
+  // padding: 0.5em 1em;
   background-color: #0074d9;
   color: #fff;
   font-size: 1em;
