Post Comments component created && send button component created && .scss of comments and likes modified

--- a/src/components/likes/likes.scss
+++ b/src/components/likes/likes.scss
@@ -1,8 +1,57 @@
 .likes-container {
   display: flex;
   align-items: center;
-}
+  font-size: 20px;
 
-.heart {
-  margin-right: 5px; // Agrega espaciado si el icono está demasiado cerca del texto
+  .heart {
+    font-size: 16px;
+    color: #ccc;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    &.--liked {
+      color: red;
+    }
+
+    svg {
+      position: relative;
+      z-index: 1;
+    }
+
+    &::before,
+    &::after {
+      content: '';
+      background-color: red;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0;
+      transition: opacity 0.2s ease-out;
+    }
+
+    &::before {
+      transform: rotate(-45deg);
+    }
+
+    &::after {
+      transform: rotate(45deg);
+    }
+
+    &.--filled {
+      &::before,
+      &::after {
+        opacity: 1;
+      }
+    }
+  }
+
+  span {
+    font-size: 16px;
+    color: #444;
+    margin-left: 4px;
+  }
 }
