--- a/src/components/visualComments/visualComments.scss
+++ b/src/components/visualComments/visualComments.scss
@@ -1,27 +1,29 @@
-.postComment {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  
+.visualComment {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  border-top: 1px solid black;
+  border-radius: 5px;
 
-  
-    .data {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      
-  
-      .username {
-        font-weight: bold;
-      }
-    }
-  
-    .like-time {
-      margin-left: 100px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      justify-content: space-between;
-      height: 20px;
+
+  .data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 5px;
+    
+
+    .username {
+      font-weight: bold;
     }
   }
+
+  .like-time {
+    margin-left: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    height: 20px;
+  }
+}
