--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -1,8 +1,8 @@
 .nav-menu {
   background-color: #1a3891;
-  position: sticky;
+  position: fixed;
   bottom: 0;
-  left: 0;
+  box-sizing: border-box;
   width: 100%;
   z-index: 100;
   border-top: 1px solid #ccc;
