#36 Changes in Roadmap's scss

--- a/src/components/roadmap/roadmap.scss
+++ b/src/components/roadmap/roadmap.scss
@@ -1,3 +1,35 @@
 .roadmap-container {
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  padding: 5px;
+  position: relative;
+
+  &__left-column {
+    flex: 1;
+    position: absolute;
+  }
+
+  &__center-column {
+    flex: 1;
+    position: absolute;
+    left: 95px;
+  }
+
+  &__right-column {
+    flex: 1;
+    flex-direction: row;
+    position: absolute;
+    right: 838px;
+  }
+
+  &__circle {
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #8394c4;
+  }
 }
