#36 Dot style function created (more comprobations needed)

--- a/src/components/roadmap/roadmap.scss
+++ b/src/components/roadmap/roadmap.scss
@@ -25,11 +25,10 @@
     right: 838px;
   }
 
-  &__circle {
+  &__dot {
     height: 18px;
     width: 18px;
     border-radius: 50%;
     display: inline-block;
-    background-color: #8394c4;
   }
 }
