--- a/src/components/userPhoto/userPhoto.scss
+++ b/src/components/userPhoto/userPhoto.scss
@@ -1,4 +1,48 @@
-.circle-image-container {
+.user-photo {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+ 
+ &__circle-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+&__circle {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 3px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+&__circle-image {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+}
+ 
+}
+ 
+ 
+ 
+ 
+ /*
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+  }.circle-image-container {
     width: 100%;
     height: auto;
     display: flex;
@@ -22,12 +66,6 @@
     height: auto;
   }
 
-.square {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-  }
+
   
+*/
