--- a/src/components/roadmap/roadmap.scss
+++ b/src/components/roadmap/roadmap.scss
@@ -1,46 +1,73 @@
 .roadmap-container {
   width: 100vw;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: start;
+  align-items: center;
   padding: 5px;
   position: relative;
+  box-sizing: border-box;
 
   &__left-column {
     flex: 1;
     position: absolute;
+    left: 5px;
   }
 
   &__center-column {
     flex: 1;
     position: absolute;
-    left: 95px;
+    left: 85px;
   }
 
   &__right-column {
     flex: 1;
     flex-direction: row;
     position: absolute;
-    right: 838px;
+    right: 100px;
   }
 
   // Left column elements
   &__date {
+    color: rgb(104, 101, 101);
+    font-size: 11pt;
   }
 
   // Center column elements
+  &__dot-line-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+
   &__dot {
     height: 18px;
     width: 18px;
     border-radius: 50%;
     display: inline-block;
+    position: relative;
   }
 
   &__line {
+    position: absolute;
+    //TODO ajustar respecto al nav bar una vez implementado en el componente padre
+    bottom: calc(100%);
+    width: 2px;
+    //TODO ajustar respecto al menú del perfil y el resto de elementos del roadmap una vez implementados
+    height: calc(50% + 12px);
+    background-color: rgb(190, 187, 187);
   }
 
   // Right column elements
   &__task-name {
+    color: black;
+    font-size: 12pt;
+  }
+
+  &__difficulty {
+    color: rgb(104, 101, 101);
+    font-size: 10pt;
   }
 }
