--- a/src/components/userInfo/userInfo.scss
+++ b/src/components/userInfo/userInfo.scss
@@ -1,9 +1,10 @@
 .user-info {
+  margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100px;
   padding: 5px;
   position: relative;
