--- a/src/components/profileProgressBar/profileProgressBar.scss
+++ b/src/components/profileProgressBar/profileProgressBar.scss
@@ -1,52 +1,25 @@
 .progress-bar {
+  position: relative;
   width: 100%;
   height: 20px;
-  position: relative;
-  &-completed {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    background-color: purple;
+  overflow: visible;
+
+  &__progress {
     position: relative;
-  }
+    height: 100%;
 
-  &__progress-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-    white-space: nowrap; /* Agregamos la propiedad white-space para evitar que el texto se divida en varias líneas */
-
-    &before {
-      content: '';
-      display: block;
+    &__text-level {
       position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, 0);
-      border-left: 6px solid transparent;
-      border-right: 6px solid transparent;
-      border-top: 6px solid #007bff;
-    }
-
-    &after {
-      content: attr(data-progress);
-      display: block;
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, 5px);
-      color: #007bff;
+      top: 16%;
+      left: 38%;
       font-size: 14px;
       font-weight: bold;
       text-align: center;
+      white-space: nowrap;
+
+      &__points {
+        font-weight: normal;
+      }
     }
   }
 }
