--- a/src/components/roadmap/roadmap.scss
+++ b/src/components/roadmap/roadmap.scss
@@ -54,7 +54,7 @@
     position: absolute;
     bottom: calc(100%);
     width: 2px;
-    height: 66px;
+    height: calc(50% + 66px);
     background-color: rgb(190, 187, 187);
   }
 
