--- a/src/components/profileProgressBar/profileProgressBar.scss
+++ b/src/components/profileProgressBar/profileProgressBar.scss
@@ -5,16 +5,14 @@
   overflow: visible;
 
   &__progress {
-    position: relative;
     height: 100%;
 
     &__text-level {
-      position: absolute;
-      top: 16%;
-      left: 38%;
+      left: 0;
       font-size: 14px;
       font-weight: bold;
       text-align: center;
+      display: flex;
       white-space: nowrap;
 
       &__points {
