--- a/src/components/comments/comments.scss
+++ b/src/components/comments/comments.scss
@@ -1,38 +1,28 @@
 .comments-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  .comment-toggle-container {
+    .comment-button {
+      background-color: transparent;
+      border: none;
+      color: inherit;
+      padding: 0;
+      font-size: inherit;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease-in-out;
 
-  p {
-    margin: 4px 0;
+      &:hover {
+        transform: scale(1.2);
+      }
+
+      &:focus {
+        outline: none;
+      }
+
+      &:active {
+        transform: scale(0.8);
+      }
+    }
   }
-}
-
-.comment-toggle-container {
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  color: #444;
-  cursor: pointer;
-  margin-left: 12px;
-}
-
-.comment-icon {
-  margin-right: 4px;
-}
-
-
-.Comments {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.postComment {
-  width: 100%;
-}
-
-.visualComment {
-  width: 100%;
 }
